@@ -1,5 +1,5 @@
 #
-# $P4: //depot/projects/trustedbsd/openbsm/etc/audit_class#3 $
+# $P4: //depot/projects/trustedbsd/openbsm/etc/audit_class#4 $
 #
 # This file must match audit.h
 #
@@ -17,7 +17,6 @@
 0x00000400:na:non attributable
 0x00000800:ad:administrative
 0x00001000:lo:login_logout
-0x00002000:tf:tfm
 0x00004000:ap:application
 0x20000000:io:ioctl
 0x40000000:ex:exec
